# v3.1

* Allow validate_presence_of to work with associations [#63]

* Allow validate_uniqueness_of to work when scopes are not stringfiable values.
  You can now give timestamps, datetime, date and boolean as scopes [#60]

* Allow subjects to be overwriten quickly (quick subjects):

    describe Post
      should_validate_presente_of :title
 
      describe :published => true do
        should_validate_presence_of :published_at
      end
    end
 
  Is the same as:

    describe Post
      should_validate_presente_of :title
 
      describe "when published is true" do
        subject { Post.new(:published => true) }
        should_validate_presence_of :published_at
      end
    end

  And the string can be also localized using I18n [#57]

[COMPATIBILITY] validate_associated no longer accepts a block to confgure the
builder:

    should_validate_associated(:tasks){ |p| p.tasks.build(:captcha => 'i_am_a_robot') }

The right way to do this is by giving an option called builder and a proc:

    should_validate_associated :tasks, :builder => proc{ |p| p.tasks.build(:captcha => 'i_am_a_robot') }

* validate_uniqueness_of and accept_nested_attributes_for now use the new
  interpolation option {{sentence}} [#58]

* Added accept_nested_attributes_for matcher [#39]

* Added have_default_scope matcher [#38]

* Allow :conditions, :include, :joins, :limit, :offset, :order, :select, :readonly,
  :group, :having, :from, :lock as quick accessors to have_scope matcher

* Allow all kind of objects to be sent to have_scope (including datetimes, arrays,
  booleans and nil) (thanks to Szymon Nowak and Nolan Eakins) [#53]

* Added support to sql options in association_matcher: select, conditions, include,
  group, having, order, limit and offset, plus finder_sql and counter_sql. [#48]

* :source and :source_type are now supported by association matcher [#47]

* validate_inclusion_of became smarter since it now tests invalid values too [#36]
