@@ -145,6 +145,29 @@ describe 'validate_length_of' do
       it { should_not define_and_validate(:is => 3).is(4) }
     end
 
+    describe "with with kind of" do
+      def define_and_validate(options)
+        define_model :variant, :product_id => :integer
+
+        @model = define_model :product do
+          has_many :variants
+          validates_length_of :variants, options
+        end
+
+        validate_length_of(:variants)
+      end
+
+      it { should define_and_validate(:within => 3..6).within(3..6).with_kind_of(Variant) }
+      it { should_not define_and_validate(:within => 2..6).within(3..6).with_kind_of(Variant) }
+      it { should_not define_and_validate(:within => 3..7).within(3..6).with_kind_of(Variant) }
+
+      it "should raise association type mismatch if with_kind_of is not supplied" do
+        lambda {
+          should_not define_and_validate(:within => 3..6).within(3..6)
+        }.should raise_error(ActiveRecord::AssociationTypeMismatch)
+      end
+    end
+
     # Those are macros to test optionals which accept only boolean values
     create_optional_boolean_specs(:allow_nil, self)
     create_optional_boolean_specs(:allow_blank, self)
